[gd_scene load_steps=12 format=3 uid="uid://ty2w1el7t7x1"]

[ext_resource type="Script" path="res://scripts/weapons/Weapon.gd" id="1_kmqwp"]
[ext_resource type="Script" path="res://scripts/Editor/WeaponEditor.gd" id="1_lwxej"]
[ext_resource type="PackedScene" uid="uid://in7hxftu4bux" path="res://scenes/weapons/bullet.tscn" id="2_2feoc"]
[ext_resource type="Texture2D" uid="uid://8rem7ot0im5f" path="res://assets/PNG/weapon_machine.png" id="4_gsi0a"]
[ext_resource type="Texture2D" uid="uid://dj47mnktkpau5" path="res://assets/Spritesheet/onlyObjects_default.png" id="4_rbxfv"]
[ext_resource type="Texture2D" uid="uid://b7akmcbl17gf1" path="res://assets/PNG/Weapons/Sniper.png" id="5_fv2be"]
[ext_resource type="Script" path="res://scripts/weapons/SpecialPowers/ThroughWallsBullets.gd" id="7_vgxi5"]

[sub_resource type="Animation" id="Animation_56nst"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_mj1et"]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 1]
}

[sub_resource type="Animation" id="Animation_3sddm"]
resource_name = "muzzle_flash"
length = 0.07
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.07),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eygrr"]
_data = {
"RESET": SubResource("Animation_56nst"),
"explosion": SubResource("Animation_mj1et"),
"muzzle_flash": SubResource("Animation_3sddm")
}

[node name="WeaponManager" type="Node2D"]
script = ExtResource("1_lwxej")
properties/weapon_name = "sniper"
properties/special_power_unlocked = true
properties/level = 1
power/points_to_unlock_power = 200
power/current_points_charge_power = 0
power/can_use_power = true
bullet/projectile = ExtResource("2_2feoc")
bullet/bullet_speed = 20
bullet/bullet_damages = 15
bullet/bullet_size = 1.0
bullet/bullet_impact_force = 2.0
bullet/bullet_piercing_force = 4
bullet/bullet_should_bounce = false
bullet/bullet_should_pierce_walls = false
loader/loader_capacity = 4
weapon/enable = true
weapon/number_of_balls_by_burt = 1
weapon/frequence_of_burt = 0.0
weapon/precision_angle = Vector2(-1, 1)
weapon/precision = 0.1
weapon/recoil_force = 1.5

[node name="Weapon" type="Node2D" parent="."]
script = ExtResource("1_kmqwp")

[node name="Sprite2D" type="Sprite2D" parent="Weapon"]
texture = ExtResource("4_gsi0a")

[node name="SideSprite2D" type="Sprite2D" parent="Weapon"]
visible = false
scale = Vector2(1.7, 1.7)
texture = ExtResource("5_fv2be")

[node name="FirePosition" type="Marker2D" parent="Weapon"]
position = Vector2(18, 4.48227e-05)

[node name="FireDirection" type="Marker2D" parent="Weapon"]
position = Vector2(20, 4.48227e-05)

[node name="AttackCoolDown" type="Timer" parent="Weapon"]
wait_time = 1.35
one_shot = true

[node name="ReloadCoolDown" type="Timer" parent="Weapon"]
wait_time = 2.0
one_shot = true

[node name="MuzzleFlash" type="Sprite2D" parent="Weapon"]
visible = false
position = Vector2(28, 4.48227e-05)
rotation = -1.5708
texture = ExtResource("4_rbxfv")
region_enabled = true
region_rect = Rect2(324, 334, 20, 25)

[node name="Animation" type="AnimationPlayer" parent="Weapon"]
root_node = NodePath("../MuzzleFlash")
libraries = {
"": SubResource("AnimationLibrary_eygrr")
}

[node name="SpecialPower" type="Node2D" parent="Weapon"]
script = ExtResource("7_vgxi5")
